--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Scott Brandenberg <sjbrandenberg@ucla.edu>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.9"
 pandas = "^2.1.3"
 pymysql = "^1.1.0"
 sqlalchemy = "^2.0.23"
@@ -14,6 +14,7 @@ sqlalchemy = "^2.0.23"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
+black = "^23.11.0"
 
 [build-system]
 requires = ["poetry-core"]
