--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = ">=3.9"
 pandas = "^2.1.3"
 pymysql = "^1.1.0"
 sqlalchemy = "^2.0.23"
+numpy = "^1.24.0"
 
 
 [tool.poetry.group.dev.dependencies]
